create winner card

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -11,6 +11,7 @@
 @import "../scss/components/buttons";
 @import "../scss/components/forms";
 @import "../scss/components/sticky-block";
+@import "../scss/components/swiper";
 
 // responsive design
 :root {
