--- a/assets/scss/components/_swiper.scss
+++ b/assets/scss/components/_swiper.scss
@@ -1,6 +1,13 @@
+:root {
+    --swiper-theme-color: var(--white);
+}
+
 .swiper-wrapper {
+    width: 100% !important;
+    height: 100% !important;
     .swiper-slide,
     swiper-slide {
         width: 100% !important;
+        height: 100% !important;
     }
 }
