--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -107,7 +107,7 @@
         padding: calc(var(--bs-btn-padding-y) - 0.25rem) calc(var(--bs-btn-padding-x) - 0.25rem);
     }
     &-lg {
-        padding: calc(var(--bs-btn-padding-y) + 0.56rem) calc(var(--bs-btn-padding-x) + 0.25rem);
+        padding: calc(var(--bs-btn-padding-y) + 0.88rem) calc(var(--bs-btn-padding-x) + 0.5rem);
     }
     &-rounded {
         --bs-border-radius: 50rem;
@@ -181,28 +181,6 @@
             align-items: center;
             justify-content: center;
         }
-        &-burger {
-            --bs-btn-padding-x: 0;
-            --bs-btn-padding-y: 0;
-            --bs-btn-border-width: 0;
-            --bs-btn-box-shadow: none;
-            --bs-btn-border-color: transparent;
-            --bs-btn-hover-border-color: transparent;
-            --bs-btn-active-border-color: transparent;
-            --bs-btn-disabled-border-color: transparent;
-            & svg {
-                min-width: 1.5rem !important;
-                min-height: 1rem;
-                & path {
-                    stroke: unset;
-                    fill: currentColor;
-                }
-            }
-        }
-    }
-    &-wider {
-        --bs-btn-padding-x: 1.875rem;
-        --bs-btn-padding-y: 0.625rem;
     }
 }
 
@@ -242,9 +220,9 @@
         --bs-btn-active-bg: #{darken($color, 10%)};
         --bs-btn-active-border-color: #{darken($color, 10%)};
         --bs-btn-active-shadow: inset 0 3px 5px rgba(var(--#{$value}-rgb), 0.125);
-        --bs-btn-disabled-color: rgba(var(--dark-rgb), 0.3);
-        --bs-btn-disabled-bg: var(--grey);
-        --bs-btn-disabled-border-color: var(--grey);
+        --bs-btn-disabled-color: #{lighten($color, 35%)};
+        --bs-btn-disabled-bg: rgba(var(--#{$value}-rgb), 1);
+        --bs-btn-disabled-border-color: rgba(var(--#{$value}-rgb), 1);
         &.btn-voluminous {
             --bs-btn-box-shadow: 0rem 0.0625rem 0.0469rem 0rem rgba(var(--white-rgb), 0.15) inset,
                 0rem -0.0625rem 0.0625rem 0rem rgba(var(--true-black-rgb), 0.33) inset;
@@ -253,9 +231,9 @@
             filter: drop-shadow(0rem 0.125rem 1rem rgba(var(--#{$value}-rgb), 0.5));
         }
         @if $value == "primary" {
-            --bs-btn-color: var(--black);
-            --bs-btn-hover-color: var(--black);
-            --bs-btn-active-color: var(--black);
+            --bs-btn-color: var(--white);
+            --bs-btn-hover-color: #{darken($color, 25%)};
+            --bs-btn-active-color: var(--white);
             --bs-btn-active-bg: #{darken($color, 25%)};
             --bs-btn-active-border-color: #{darken($color, 25%)};
         }
@@ -411,58 +389,6 @@
                 --bs-btn-bg: rgba(var(--#{$value}-rgb), 0.45);
             }
         }
-    }
-}
-
-@property --progress-value {
-    syntax: "<percent>";
-    initial-value: 0%;
-    inherits: false;
-}
-
-@keyframes progress {
-    to {
-        --finish-value: var(--progress-value);
-    }
-}
-
-.btn-progress {
-    &-round {
-        position: absolute;
-        top: calc(-3 * var(--bs-border-width));
-        left: calc(-3 * var(--bs-border-width));
-        z-index: -1;
-        width: calc(100% + var(--bs-border-width) * 6);
-        height: calc(100% + var(--bs-border-width) * 6);
-        border-radius: var(--bs-border-radius);
-        animation: progress 2s 1 forwards;
-    }
-    &-spinner {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        width: 100%;
-        height: 100%;
-        transform: translate(-50%, -50%);
-        transform-origin: center center;
-        & .spinner-border {
-            width: 100%;
-            height: 100%;
-            --bs-spinner-border-width: 0.2rem;
-        }
-    }
-}
-
-.btn-tag {
-    --bs-btn-padding-x: 0.75rem;
-    --bs-btn-padding-y: 0.62rem;
-    --bs-btn-font-size: 0.75rem;
-    --bs-btn-font-weight: 400;
-    --bs-btn-line-height: 120%;
-    &-card {
-        --bs-btn-padding-x: 0.5rem;
-        --bs-btn-padding-y: 0.22rem;
-        --bs-btn-font-size: 0.875rem;
     }
 }
 
