--- a/assets/scss/components/_forms.scss
+++ b/assets/scss/components/_forms.scss
@@ -1,18 +1,18 @@
 :root {
-    --padding-input-y: 1rem;
-    --padding-input-x: 1rem;
-    --form-font-size: 1.125rem;
+    --padding-input-y: 1.88rem;
+    --padding-input-x: 2.81rem;
+    --form-font-size: 1.5rem;
     --form-line-height: 120%;
     --form-font-weight: 600;
-    --form-font-color: var(--grey-rgb);
-    --form-font-color-opacity: 0.8;
+    --form-font-color: var(--blue-rgb);
+    --form-font-color-opacity: 1;
     --form-letter-spacing: 0;
     --form-border-width: 0.0625rem;
-    --form-border-color: var(--grey-rgb);
-    --form-border-color-opacity: 1;
-    --form-border-radius: 1rem;
-    --form-background-color: var(--dark-grey-rgb);
-    --form-background-color-opacity: 0.5;
+    --form-border-color: var(--dark-white-rgb);
+    --form-border-color-opacity: 0;
+    --form-border-radius: 1.56rem;
+    --form-background-color: var(--dark-white-rgb);
+    --form-background-color-opacity: 1;
     --form-icon-width: 1rem;
     --form-icon-height: 1rem;
 }
@@ -62,6 +62,9 @@
         }
         & > * {
             display: flex;
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
         }
     }
     &-control {
@@ -169,6 +172,10 @@
         }
         &:hover:not(:disabled):not([readonly])::file-selector-button {
             background-color: var(--bs-secondary-bg);
+        }
+        &:disabled,
+        &.disabled {
+            --form-font-color-opacity: 1;
         }
     }
     &-floating {
