--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -8,6 +8,7 @@
 @import "./utilities/normalize";
 
 // components
+@import "../scss/components/animations";
 @import "../scss/components/bottom";
 @import "../scss/components/buttons";
 @import "../scss/components/devider";
@@ -53,9 +54,24 @@ html {
 }
 
 body {
+    position: relative;
+    z-index: 1;
     font-family: "Montserrat", sans-serif;
     font-size: 1rem;
     background: radial-gradient(89% 48% at 50% 8%, rgb(var(--primary-rgb)), rgb(var(--primary-light-rgb)) 100%);
+    &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-image: url("/assets/images/elements/root/pattern.png");
+        background-repeat: repeat;
+        background-size: auto;
+        background-position: center top;
+        background-attachment: fixed;
+    }
 }
 
 img {
@@ -74,11 +90,6 @@ img {
     min-height: 100vh;
     min-height: 100dvh;
     padding: 1.875rem 0 0 0;
-    background-image: url("/assets/images/elements/root/pattern.png");
-    background-repeat: repeat;
-    background-size: auto;
-    background-position: center top;
-    background-attachment: fixed;
     overflow-x: clip;
     transition: background-image 0.6s ease;
 }
