--- a/assets/scss/components/_bottom.scss
+++ b/assets/scss/components/_bottom.scss
@@ -1,7 +1,7 @@
 .bottom {
     --bs-gutter-x: 1.5rem;
     position: sticky;
-    top: 100%;
+    top: 0;
     z-index: 2;
     width: 100%;
     margin-left: auto;
