--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -13,10 +13,13 @@
 @import "../scss/components/buttons";
 @import "../scss/components/devider";
 @import "../scss/components/forms";
+@import "../scss/components/header";
+@import "../scss/components/menu";
 @import "../scss/components/preloader";
 @import "../scss/components/spinners";
 @import "../scss/components/stretched";
 @import "../scss/components/swiper";
+@import "../scss/components/tag";
 @import "../scss/components/text";
 
 // responsive design
