--- a/assets/scss/components/_menu.scss
+++ b/assets/scss/components/_menu.scss
@@ -14,6 +14,7 @@
     background-color: rgba(var(--menu-background-color), 1);
     border-radius: 1.88rem 1.88rem 0rem 0rem;
     transform: translate(-50%, 100%);
+    overflow-x: hidden;
     overflow-y: auto;
     transition: transform 0.4s ease-in-out;
     @media (min-width: 768px) {
