--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -14,6 +14,7 @@
 @import "../scss/components/devider";
 @import "../scss/components/forms";
 @import "../scss/components/header";
+@import "../scss/components/hint";
 @import "../scss/components/menu";
 @import "../scss/components/preloader";
 @import "../scss/components/spinners";
