--- a/assets/scss/parts/_user-card.scss
+++ b/assets/scss/parts/_user-card.scss
@@ -4,6 +4,7 @@
     --user-card-border-radius: 1.56rem;
     --user-card-background-color: var(--dark-white-rgb);
     --user-card-wrapper-gap: 1rem;
+    --user-card-content-gap: 0.313rem;
     --user-card-color: var(--blue-rgb);
 }
 
@@ -16,6 +17,7 @@
     width: 100%;
     height: 100%;
     padding: var(--user-card-padding-y) var(--user-card-padding-x);
+    color: rgba(var(--user-card-color), 1);
     background-color: rgba(var(--user-card-background-color), 1);
     border-radius: var(--user-card-border-radius);
     cursor: pointer;
@@ -32,8 +34,8 @@
     &-counter {
         position: relative;
         z-index: 1;
+        text-align: right;
         font-weight: 600;
-        color: rgba(var(--user-card-color), 1);
         transition: 0.4s ease;
         &::before {
             content: counter(item);
@@ -60,5 +62,21 @@
         flex-direction: column;
         align-items: flex-start;
         flex: 1;
+        row-gap: var(--user-card-content-gap);
+        column-gap: var(--user-card-content-gap);
+    }
+    &-name {
+        font-weight: 600;
+        font-size: 1.38rem;
+    }
+    &-description {
+        font-size: 1rem;
+        color: rgba(var(--user-card-color), 0.5);
+    }
+    &-actions {
+        & > * {
+            --bs-btn-size: 1.25rem;
+            color: rgba(var(--user-card-color), 1);
+        }
     }
 }
