--- a/assets/scss/pages/main.scss
+++ b/assets/scss/pages/main.scss
@@ -1,6 +1,7 @@
 // parts
 @import "../parts/card-link";
 @import "../parts/sticky-block";
+@import "../parts/user-list";
 @import "../parts/user-card";
 @import "../parts/winner-card";
 @import "../parts/winner-badge";
