--- a/assets/scss/pages/main.scss
+++ b/assets/scss/pages/main.scss
@@ -1,8 +1,10 @@
 // parts
 @import "../parts/card-link";
 @import "../parts/sticky-block";
-@import "../parts/user-list";
+@import "../parts/user-badge";
 @import "../parts/user-card";
+@import "../parts/user-list";
+@import "../parts/user-status";
 @import "../parts/winner-card";
 @import "../parts/winner-badge";
 
