--- a/assets/scss/components/_menu.scss
+++ b/assets/scss/components/_menu.scss
@@ -16,6 +16,9 @@
     transform: translate(-50%, 100%);
     overflow-x: hidden;
     overflow-y: auto;
+    -webkit-mask-image: -webkit-radial-gradient(white, black);
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
     transition: transform 0.4s ease-in-out;
     @media (min-width: 768px) {
         max-width: 26.88rem;
