--- a/assets/scss/parts/_card-link.scss
+++ b/assets/scss/parts/_card-link.scss
@@ -5,6 +5,7 @@
     width: 100%;
     height: 100%;
     color: rgba(var(--black-rgb), 0.2);
+    overflow: hidden;
     &-title {
         display: flex;
         flex-wrap: nowrap;
