--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -23,6 +23,7 @@
 @import "../scss/components/swiper";
 @import "../scss/components/tag";
 @import "../scss/components/text";
+@import "../scss/components/tooltip";
 
 // responsive design
 :root {
