user profile create

--- a/assets/scss/components/_tooltip.scss
+++ b/assets/scss/components/_tooltip.scss
@@ -26,7 +26,7 @@
     &-wrapper {
         position: relative;
         width: 100%;
-        max-width: calc(var(--tooltip-max-width) + var(--tooltip-padding));
+        min-width: var(--tooltip-max-width);
         height: fit-content;
         padding: var(--tooltip-padding);
         background-color: rgba(var(--tooltip-background-color), 0.8);
