--- a/assets/scss/pages/main.scss
+++ b/assets/scss/pages/main.scss
@@ -1,5 +1,6 @@
 // parts
 @import "../parts/card-link";
+@import "../parts/profile-fields";
 @import "../parts/sticky-block";
 @import "../parts/user-badge";
 @import "../parts/user-card";
