--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -116,6 +116,10 @@ img {
     padding: 1.875rem 0 0 0;
     overflow-x: clip;
     transition: background-image 0.6s ease;
+    &-max {
+        max-height: 100dvh;
+        max-height: 100vh;
+    }
 }
 
 .content {
