--- a/assets/scss/components/_bottom.scss
+++ b/assets/scss/components/_bottom.scss
@@ -6,7 +6,6 @@
     width: 100%;
     margin-left: auto;
     margin-right: auto;
-    z-index: 1;
     @media (min-width: 768px) {
         max-width: calc(26.88rem + var(--bs-gutter-x));
         padding-right: calc(var(--bs-gutter-x) * 0.5);
@@ -24,11 +23,21 @@
         display: flex;
         flex-direction: column;
         flex: 1;
+        max-height: 100%;
         & .bottom-inner {
             display: flex;
             flex-direction: column;
             flex: 1;
             min-height: 100%;
+            row-gap: 1rem;
+            column-gap: 1rem;
+        }
+    }
+    &-scrolled {
+        overflow: hidden;
+        & .bottom-inner {
+            overflow-x: hidden;
+            overflow-y: auto;
         }
     }
 }
