--- a/assets/scss/components/_bottom.scss
+++ b/assets/scss/components/_bottom.scss
@@ -18,6 +18,9 @@
         padding: 1.875rem;
         border-radius: 1.88rem 1.88rem 0rem 0rem;
         background-color: var(--white);
+        -webkit-mask-image: -webkit-radial-gradient(white, black);
+        -webkit-backface-visibility: hidden;
+        -moz-backface-visibility: hidden;
     }
     &-fill {
         display: flex;
