--- a/assets/scss/components/_tooltip.scss
+++ b/assets/scss/components/_tooltip.scss
@@ -8,7 +8,7 @@
     --tooltip-font-weight: 500;
     --tooltip-line-height: 100%;
     --tooltip-border-radius: 0.19rem;
-    --tooltip-box-shadow: 0rem 0.13rem 0.25rem 0rem rgba(var(--gre-rgb), 0.15);
+    --tooltip-box-shadow: 0rem 0.13rem 0.25rem 0rem rgba(var(--black-rgb), 0.15);
 }
 
 .tooltip {
