--- a/assets/scss/parts/_user-list.scss
+++ b/assets/scss/parts/_user-list.scss
@@ -8,5 +8,9 @@
     row-gap: var(--user-list-gap);
     column-gap: var(--user-list-gap);
     &-winner {
+        counter-increment: item 3;
+        & .user-card {
+            counter-reset: 3;
+        }
     }
 }
