--- a/assets/scss/pages/main.scss
+++ b/assets/scss/pages/main.scss
@@ -1,5 +1,7 @@
 // parts
 @import "../parts/card-link";
+@import "../parts/draw-card";
+@import "../parts/draw-list";
 @import "../parts/profile-fields";
 @import "../parts/sticky-block";
 @import "../parts/user-badge";
