--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -21,6 +21,7 @@
 @import "../scss/components/spinners";
 @import "../scss/components/stretched";
 @import "../scss/components/swiper";
+@import "../scss/components/tabs";
 @import "../scss/components/tag";
 @import "../scss/components/text";
 @import "../scss/components/tooltip";
