update dynamic height

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -118,8 +118,7 @@ img {
     overflow-x: clip;
     transition: background-image 0.6s ease;
     &-max {
-        max-height: 100dvh;
-        max-height: 100vh;
+        max-height: 100svh;
     }
 }
 
